project/stage/testing/semantic/semantic_tests/accept/return_arr.ul
void main() {

}

int [1] foo() {
    int [1] arr;
    return arr;
}
