project/stage/testing/semantic/semantic_tests/reject/index_int.ul
void main() {
    int  notarr;
    notarr[foo()];
}
int foo(){
    return 0;
}
